Introduced space before footer, to avoid the last side bar border too close to the footer border when page has less content

--- a/styles/structure/body.less
+++ b/styles/structure/body.less
@@ -117,6 +117,7 @@ body {
 	*zoom: 1;
 	border-bottom: 1px dotted #999;
 	margin-bottom: 3px;
+	padding-bottom: 15px;
 
 	.pkp_structure_main {
 		*zoom: 1;
